@@ -19,13 +19,14 @@ import io.micronaut.core.annotation.Internal;
 import io.micronaut.core.annotation.NonNull;
 import io.micronaut.inject.ast.ArrayableClassElement;
 import io.micronaut.inject.ast.ClassElement;
-import io.micronaut.inject.ast.annotation.ElementAnnotationMetadataFactory;
 import io.micronaut.inject.ast.WildcardElement;
+import io.micronaut.inject.ast.annotation.ElementAnnotationMetadataFactory;
+import io.micronaut.inject.ast.annotation.MutableAnnotationMetadataDelegate;
 
 import javax.lang.model.type.WildcardType;
+import java.util.Collection;
 import java.util.List;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 /**
  * Implementation of {@link io.micronaut.inject.ast.WildcardElement} for Java.
@@ -36,28 +37,61 @@ import java.util.stream.Collectors;
 @Internal
 final class JavaWildcardElement extends JavaClassElement implements WildcardElement {
     private final WildcardType wildcardType;
+    private final JavaClassElement upperBound;
     private final List<JavaClassElement> upperBounds;
     private final List<JavaClassElement> lowerBounds;
 
     JavaWildcardElement(ElementAnnotationMetadataFactory elementAnnotationMetadataFactory,
                         @NonNull WildcardType wildcardType,
+                        @NonNull JavaClassElement mostUpper,
                         @NonNull List<JavaClassElement> upperBounds,
                         @NonNull List<JavaClassElement> lowerBounds) {
         super(
-            upperBounds.get(0).classElement,
-            elementAnnotationMetadataFactory,
-            upperBounds.get(0).visitorContext,
-            upperBounds.get(0).typeArguments,
-            upperBounds.get(0).getGenericTypeInfo()
+                mostUpper.classElement,
+                elementAnnotationMetadataFactory,
+                mostUpper.visitorContext,
+                mostUpper.typeArguments,
+                mostUpper.getTypeArguments()
         );
         this.wildcardType = wildcardType;
+        this.upperBound = mostUpper;
         this.upperBounds = upperBounds;
         this.lowerBounds = lowerBounds;
     }
 
     @Override
+    public MutableAnnotationMetadataDelegate<?> getAnnotationMetadata() {
+        return upperBound.getAnnotationMetadata();
+    }
+
+    @Override
+    public boolean isTypeVariable() {
+        return true;
+    }
+
+    @Override
     public Object getNativeType() {
         return wildcardType;
+    }
+
+    @Override
+    public int hashCode() {
+        return wildcardType.hashCode();
+    }
+
+    @Override
+    public boolean equals(Object o) {
+        if (this == o) {
+            return true;
+        }
+        if (o == null) {
+            return false;
+        }
+        io.micronaut.inject.ast.Element that = (io.micronaut.inject.ast.Element) o;
+        if (that instanceof JavaWildcardElement wildcardElement) {
+            return wildcardElement.wildcardType.equals(wildcardType);
+        }
+        return false;
     }
 
     @NonNull
@@ -82,9 +116,9 @@ final class JavaWildcardElement extends JavaClassElement implements WildcardElem
 
     @Override
     public ClassElement foldBoundGenericTypes(@NonNull Function<ClassElement, ClassElement> fold) {
-        List<JavaClassElement> upperBounds = this.upperBounds.stream().map(ele -> toJavaClassElement(ele.foldBoundGenericTypes(fold))).collect(Collectors.toList());
-        List<JavaClassElement> lowerBounds = this.lowerBounds.stream().map(ele -> toJavaClassElement(ele.foldBoundGenericTypes(fold))).collect(Collectors.toList());
-        return fold.apply(upperBounds.contains(null) || lowerBounds.contains(null) ? null : new JavaWildcardElement(elementAnnotationMetadataFactory, wildcardType, upperBounds, lowerBounds));
+        List<JavaClassElement> upperBounds = this.upperBounds.stream().map(ele -> toJavaClassElement(ele.foldBoundGenericTypes(fold))).toList();
+        List<JavaClassElement> lowerBounds = this.lowerBounds.stream().map(ele -> toJavaClassElement(ele.foldBoundGenericTypes(fold))).toList();
+        return fold.apply(upperBounds.contains(null) || lowerBounds.contains(null) ? null : new JavaWildcardElement(elementAnnotationMetadataFactory, wildcardType, upperBound, upperBounds, lowerBounds));
     }
 
     private JavaClassElement toJavaClassElement(ClassElement element) {
@@ -95,9 +129,9 @@ final class JavaWildcardElement extends JavaClassElement implements WildcardElem
                 throw new UnsupportedOperationException("Cannot convert wildcard / free type variable to JavaClassElement");
             } else {
                 return (JavaClassElement) ((ArrayableClassElement) visitorContext.getClassElement(element.getName(), elementAnnotationMetadataFactory)
-                    .orElseThrow(() -> new UnsupportedOperationException("Cannot convert ClassElement to JavaClassElement, class was not found on the visitor context")))
-                    .withArrayDimensions(element.getArrayDimensions())
-                    .withBoundGenericTypes(element.getBoundGenericTypes());
+                        .orElseThrow(() -> new UnsupportedOperationException("Cannot convert ClassElement to JavaClassElement, class was not found on the visitor context")))
+                        .withArrayDimensions(element.getArrayDimensions())
+                        .withTypeArguments((Collection<ClassElement>) element.getBoundGenericTypes());
             }
         }
     }
